# aiagentsbootdev

./: .gitignore  main.py  pyproject.toml  tests.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  devcontainer.secrets.env  devcontainer.secrets.env.template  postCreateCommand.sh
.devcontainer/dotfiles/: .zshrc
functions/: get_files_info.py
